Added the Authentication routes (Register / Login  )
